# template-docker-django

./: .dockerignore  .env.template  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: docker-entrypoint.sh
docker/nginx/conf.d/: default.conf.tmpl
docker/supervisor/: supervisord.conf
src/: manage.py
src/config/: gunicorn.py  urls.py  wsgi.py
src/config/settings/: base.py  development.py  production.py
