[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "template-docker-django"
version = "0.0.1"
description = "Template for the project using Docker and Python Django"

authors = [
    "Kang Ki Tae <imkitae@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.25"
djangorestframework = "3.11.0"
gunicorn = {version = "20.0.4", extras = ["gevent"]}
django-cors-headers = "3.2.1"
sentry-sdk = "1.14.0"
mysqlclient = "1.4.6"
django-debug-toolbar = "^2.2"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
pylint = "2.4.4"
